--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,15 +1,67 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta charset="utf-8" />
+    <meta name="author" content="Tom Brown" />
+    <meta
+      name="description"
+      content="The Ashroh Web Application. People can create personal webpages and then search for others based on things like location and interests."
+    />
+    <meta
+      name="keywords"
+      content="Connection, Social Media, CMS, Ashroh, People Finder, Interests, Friends"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+
+    <!-- Favicons - for different devices -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="<%= BASE_URL %>apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="<%= BASE_URL %>favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="<%= BASE_URL %>favicon-16x16.png"
+    />
+    <link rel="manifest" href="<%= BASE_URL %>site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="<%= BASE_URL %>safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta
+      name="msapplication-TileImage"
+      content="<%= BASE_URL %>mstile-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
+    <!-- Import Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Work+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Ashroh People Finder</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
